Changelog
=========

3.9-dev0 - (unreleased)
---------------------------

3.8 - (2020-06-17)
---------------------------
* Bug fix: fixed Python3 query execution
  [alecghica refs #111217]
* Feature: PEP8 and linting
  [alecghica refs #111217]

3.7 - (2020-06-17)
---------------------------
* Feature: added the documentation originally found under eionet.europa.eu
  [alecghica refs #111217]

3.6 - (2020-03-03)
---------------------------
* Change: Add jenkins badge
  [valentinab25]

3.5 - (2020-02-26)
--------------------------
* Feature: merged source code so it now works on both Python 2 and Python 3
  [alecghica refs #110159]
* Feature: updated Jenkins pipeline
  [alecghica refs #110159]

3.4 - (2019-01-28)
--------------------------
* Jenkins: Add sonarqube step
  [avoinea refs #101552]

3.3 - (2018-12-11)
--------------------------
* Feature: when building the request from an endpoint that followed redirects
  the query works fine now
  [alecghica refs #100666]

3.2 - (2018-06-22)
-----------------------
* Change: updated URLs pointing to eea.europa.eu with https://
  [alecghica refs #95849]

3.1 - (2017-12-12)
------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]

3.0 - (2017-11-14)
------------------
* Change: Added handler for SAXParseException and wrote a test in order to
  cover this exception
  [petchesi-iulian refs #88573]

2.9 - (2017-09-29)
------------------
* Change: Changed the projects tests structure in order to make the tests work
  [petchesi-iulian refs #88509]

2.8 - (2017-08-16)
------------------
* Change: Added sparql export method formats (xml, xmlschema, json) to be stored
  and retrieved from cache
  [zoltan_andras refs #86464]

2.7 - (2017-04-24)
------------------
* Change: updated package information
  [eduard-fironda]

2.6 - (2016-10-04)
------------------
* Change: added timeout parameter for _get_response

2.5 - (2016-07-29)
------------------